# Easy-ICD

./: .gitignore  LICENSE  README.md  Scraping.ipynb  diagrams.xd  pyproject.toml
.ipynb_checkpoints/: Scraping-checkpoint.ipynb
easy_icd/: LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
easy_icd/easy_icd.egg-info/: PKG-INFO  SOURCES.txt
easy_icd/easy_icd/outlier_detection/: build_outlier_detector.py  detect_outliers.py  train_outlier_detector.py
easy_icd/easy_icd/outlier_removal/: remove_outliers.py
easy_icd/easy_icd/scraping/: scrape_images.html  scrape_images.py
easy_icd/easy_icd/training/: early_stopping.py  losses.py  train_models.py
easy_icd/easy_icd/utils/: augmentation.py  create_dataset.py  datasets.py  losses.py  models.py  save_model.py
easy_icd/src/Easy_ICD.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
easy_icd/src/easy_icd/outlier_removal/: remove_outliers.py
easy_icd/src/easy_icd/scraping/: scrape_images.py
easy_icd/src/easy_icd/training/: losses.py  train_models.py
easy_icd/src/easy_icd/utils/: models.py
easy_icd/src/scraping/: scrape_images.py
easy_icd/src/utils/: augmentation.py  datasets.py
examples/: Scrape Images with EasyICD.ipynb  identify_outliers.ipynb  scraping_and_creating_datasets.ipynb  train_outlier_detector.ipynb
models/car_deer_noisy/ssl/simclr_modified/: test_metrics.txt
models/car_deer_noisy/sup/: test_metrics.txt  train_metrics.txt
models/cat_dog_noisy/sup/: test_metrics.txt  train_metrics.txt
models/cifar_10/sup/ft/: model_state_best.pt  test_metrics.txt
models/cifar_10/sup/lp/: model_state_best.pt  train_metrics.txt
models/cifar_100_alt/: model_state.pt
models/cifar_10_alt/ssl/simclr_modified/: train_metrics.txt
models/cifar_10_alt/sup/raw/: test_metrics.txt
old/: Scraping (old).ipynb
pretrained_models/: CIFAR-10-Alt.ipynb  CIFAR-10.ipynb  Cars & Deer.ipynb  Cats & Dogs.ipynb
pretrained_models/models/car_deer_noisy/ssl/simclr_modified/: train_metrics.txt
pretrained_models/models/cat_dog_noisy/sup/: model_state_best.pt
pretrained_models/models/cifar_10/sup/ft/: train_metrics.txt
pretrained_models/models/cifar_10/sup/lp/: test_metrics.txt
(+8 files in other folders)
