[metadata]
name = Easy-ICD
version = 1.0.0
author = Sashwat Anagolum
author_email = sashwat.anagolum@gmail.com
description = Easily create image classification datasets
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/SashwatAnagolum/Easy-ICD
project_urls =
    Bug Tracker = https://github.com/SashwatAnagolum/Easy-ICD/issues
    repository = https://github.com/SashwatAnagolum/Easy-ICD
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src